--- a/src/Framework/resource/css/style.css
+++ b/src/Framework/resource/css/style.css
@@ -584,3 +584,16 @@ a:hover,a:focus {
 .bd-text-purple {
     color:var(--bd-violet)
 }
+pre {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color:var(--bs-white);
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color:var(--bs-gray-600);
+    border: 1px solid var(--bs-gray-700);
+    border-radius: 4px;
+}
