Update CSS styles and add new API service methods and actions.

--- a/src/Framework/resource/css/style.css
+++ b/src/Framework/resource/css/style.css
@@ -584,6 +584,9 @@ a:hover,a:focus {
 .bd-text-purple {
     color:var(--bd-violet)
 }
+.bs-orange-bg {
+    background-color:#fd9843 !important
+}
 pre {
     display: block;
     padding: 9.5px;
