Update background color orange in style.css.

--- a/src/Framework/resource/css/style.css
+++ b/src/Framework/resource/css/style.css
@@ -585,7 +585,7 @@ a:hover,a:focus {
     color:var(--bd-violet)
 }
 .bs-orange-bg {
-    background-color:#fd9843 !important
+    background-color:#F1592A !important
 }
 .text-justify {
     text-align:justify !important
