--- a/src/Framework/resource/css/style.css
+++ b/src/Framework/resource/css/style.css
@@ -125,6 +125,11 @@
         scroll-behavior:smooth
     }
 }
+@font-face {
+    font-family:consolas;
+    font-style:normal;
+    src:url('https://fonts.cdnfonts.com/css/consola-mono') format('woff2');
+}
 body {
     margin:0;
     font-family:var(--bs-body-font-family);
@@ -590,12 +595,20 @@ a:hover,a:focus {
 .text-justify {
     text-align:justify !important
 }
+body.page blockquote {
+    border-left: 5px solid #F1592A;
+    background: white;
+}
+blockquote {
+    padding: 10px 20px;
+    margin: 0 0 20px;
+    font-size: 17.5px;
+    border-left: 5px solid #F1592A;
+}
 pre {
-    display: block;
-    padding: 9.5px;
-    margin: 0 0 10px;
-    font-size: 13px;
-    line-height: 1.42857143;
+    padding: 10px !important;
+    font-family: consolas !important;
+    font-size: 18px !important;
     color:var(--bs-white);
     word-break: break-all;
     word-wrap: break-word;
