--- a/src/Framework/resource/css/style.css
+++ b/src/Framework/resource/css/style.css
@@ -597,9 +597,9 @@ a:hover,a:focus {
 }
 body.page blockquote {
     border-left: 5px solid #F1592A;
-    background: white;
 }
 blockquote {
+    background-color: transparent !important;
     padding: 10px 20px;
     margin: 0 0 20px;
     font-size: 17.5px;
